--- a/src/Composition110110/Composition110110.csproj
+++ b/src/Composition110110/Composition110110.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Composition.cs" />
+    <Compile Include="MyOperations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
